--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -124,7 +124,7 @@ border: none;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>236</width>
+             <width>264</width>
              <height>511</height>
             </rect>
            </property>
@@ -199,7 +199,7 @@ border: none;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>236</width>
+             <width>264</width>
              <height>511</height>
             </rect>
            </property>
@@ -274,7 +274,7 @@ border: none;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>236</width>
+             <width>264</width>
              <height>511</height>
             </rect>
            </property>
@@ -586,7 +586,18 @@ border: none;</string>
                      <widget class="QDateEdit" name="dateEdit_2"/>
                     </item>
                     <item>
-                     <widget class="QComboBox" name="comboBox_4"/>
+                     <widget class="QComboBox" name="comboBox_4">
+                      <item>
+                       <property name="text">
+                        <string>Male</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Female</string>
+                       </property>
+                      </item>
+                     </widget>
                     </item>
                     <item>
                      <widget class="QLineEdit" name="lineEdit_17"/>
@@ -732,8 +743,8 @@ border: none;</string>
            </layout>
           </widget>
           <widget class="QWidget" name="receive_payment_page">
-           <layout class="QVBoxLayout" name="verticalLayout_14">
-            <item>
+           <layout class="QGridLayout" name="gridLayout_2">
+            <item row="0" column="0">
              <widget class="QLabel" name="label">
               <property name="font">
                <font>
@@ -746,7 +757,7 @@ border: none;</string>
               </property>
              </widget>
             </item>
-            <item>
+            <item row="1" column="0">
              <layout class="QHBoxLayout" name="horizontalLayout_6">
               <item>
                <spacer name="horizontalSpacer_4">
@@ -853,7 +864,7 @@ border: none;</string>
               </item>
              </layout>
             </item>
-            <item>
+            <item row="2" column="0">
              <spacer name="verticalSpacer_5">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -927,22 +938,101 @@ border: none;</string>
              <widget class="QTableWidget" name="tableWidget_2">
               <column>
                <property name="text">
+                <string>ID</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
                 <string>Name</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
                </property>
               </column>
               <column>
                <property name="text">
                 <string>Surname</string>
                </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
               </column>
               <column>
                <property name="text">
-                <string>Phone Number</string>
+                <string>Dirt of Birth</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Gender</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Parents Cell</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Physical Address</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
                </property>
               </column>
               <column>
                <property name="text">
                 <string>Email Address</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Date Joined</string>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                 <bold>true</bold>
+                </font>
                </property>
               </column>
              </widget>
